Expose an endpoint of updating vote.
