# api/swagger.yaml
@@ -57,6 +57,30 @@ paths:
           description: Invalid ID supplied
         404:
           description: Vote not found
+    put:
+      tags:
+      - vote
+      summary: Update vote by ID
+      description: Modify existed vote
+      operationId: updateVoteById
+      consumes:
+      - application/json
+      parameters:
+      - name: voteId
+        in: path
+        description: ID of vote to update
+        required: true
+        type: integer
+        format: int64
+      - name: vote
+        in: body
+        required: true
+        description: The user to create.
+        schema:
+          $ref: "#/definitions/VoteIncoming"
+      responses:
+        200:
+          description: Successfull deleted
   /votes:
     get:
       tags:
